[package]
name = "trezoa-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
trezoa-client = { workspace = true }
trezoa-core = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-ledger = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-perf = { workspace = true }
trezoa-poh = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-sdk = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-tpu-client = { workspace = true }
trezoa-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
