[package]
name = "trezoa-banking-stage-ingress-types"
description = "Trezoa-team banking stage ingress types"
documentation = "https://docs.rs/trezoa-banking-stage-ingress-types"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
trezoa-unstable-api = []

[dependencies]
crossbeam-channel = { workspace = true }
trezoa-perf = { workspace = true }
