[package]
name = "trezoa-banks-client"
description = "Trezoa banks client"
documentation = "https://docs.rs/trezoa-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
trezoa-banks-interface = { workspace = true }
trezoa-program = { workspace = true }
trezoa-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
trezoa-banks-server = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "trezoa_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
