[package]
name = "trezoa-banks-interface"
description = "Trezoa banks RPC interface"
documentation = "https://docs.rs/trezoa-banks-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "trezoa_banks_interface"

[features]
trezoa-unstable-api = []

[dependencies]
serde = { workspace = true }
trezoa-account = { workspace = true, features = [ "serde" ] }
trezoa-clock = { workspace = true }
trezoa-commitment-config = { workspace = true, features = [ "serde" ] }
trezoa-hash = { workspace = true }
trezoa-message = { workspace = true, features = [ "serde" ] }
trezoa-pubkey = { workspace = true }
trezoa-signature = { workspace = true, features = [ "serde" ] }
trezoa-transaction = { workspace = true, features = [ "serde" ] }
trezoa-transaction-context = { workspace = true, features = [ "serde" ] }
trezoa-transaction-error = { workspace = true, features = [ "serde" ] }
tarpc = { workspace = true, features = ["full"] }
