[package]
name = "trezoa-banks-server"
description = "Trezoa banks server"
documentation = "https://docs.rs/trezoa-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
trezoa-accounts-db = { workspace = true }
trezoa-banks-interface = { workspace = true }
trezoa-client = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-send-transaction-service = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "trezoa_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
