[package]
name = "trezoa-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-client = { workspace = true }
trezoa-connection-cache = { workspace = true }
trezoa-core = { workspace = true }
trezoa-faucet = { workspace = true }
trezoa-genesis = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-rpc = { workspace = true }
trezoa-rpc-client = { workspace = true }
trezoa-rpc-client-api = { workspace = true }
trezoa-rpc-client-nonce-utils = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-thin-client = { workspace = true }
trezoa-tpu-client = { workspace = true }
trezoa-version = { workspace = true }
tpl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
trezoa-local-cluster = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-test-validator = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
