[package]
name = "trezoa-bloom"
description = "Trezoa bloom filter"
documentation = "https://docs.rs/trezoa-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
trezoa-frozen-abi = { workspace = true }
trezoa-frozen-abi-macro = { workspace = true }
trezoa-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "trezoa_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
