[package]
name = "trezoa-bucket-map"
description = "trezoa-bucket-map"
documentation = "https://docs.rs/trezoa-bucket-map"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib"]
name = "trezoa_bucket_map"

[features]
trezoa-unstable-api = []
dev-context-only-utils = []

[dependencies]
ahash = { workspace = true }
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-pubkey = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }
fs_extra = { workspace = true }
rayon = { workspace = true }
trezoa-bucket-map = { path = ".", features = ["trezoa-unstable-api", "dev-context-only-utils"] }
trezoa-pubkey = { workspace = true, features = ["rand"] }
