[package]
name = "trezoa-clap-utils"
description = "Trezoa utilities for the clap"
documentation = "https://docs.rs/trezoa-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "trezoa_clap_utils"

[features]
trezoa-unstable-api = []

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = "2.33.0"
rpassword = { workspace = true }
trezoa-bls-signatures = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-cluster-type = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-derivation-path = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-keypair = { workspace = true, features = ["seed-derivable"] }
trezoa-message = { workspace = true }
trezoa-native-token = { workspace = true }
trezoa-presigner = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-remote-wallet = { workspace = true }
trezoa-seed-phrase = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
trezoa-pubkey = { workspace = true, features = ["rand"] }
trezoa-system-interface = { workspace = true, features = ["bincode"] }
tempfile = { workspace = true }
