[package]
name = "trezoa-clap-v3-utils"
description = "Trezoa utilities for the clap v3"
documentation = "https://docs.rs/trezoa-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
trezoa-remote-wallet = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "trezoa_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
