[package]
name = "trezoa-cli-config"
documentation = "https://docs.rs/trezoa-cli-config"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
trezoa-unstable-api = []

[dependencies]
dirs-next = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-commitment-config = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
