[package]
name = "trezoa-cli-output"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trezoa-account-decoder = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-rpc-client-api = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-vote-program = { workspace = true }
tpl-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
