[package]
name = "trezoa-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
trezoa-account-decoder = { workspace = true }
trezoa-bpf-loader-program = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-cli-output = { workspace = true }
trezoa-client = { workspace = true }
trezoa-config-program = { workspace = true }
trezoa-faucet = { workspace = true }
trezoa-loader-v4-program = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-program-runtime = { workspace = true }
trezoa-pubsub-client = { workspace = true }
trezoa-remote-wallet = { workspace = true, features = ["default"] }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-rpc-client-nonce-utils = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-tpu-client = { workspace = true, features = ["default"] }
trezoa-transaction-status = { workspace = true }
trezoa-version = { workspace = true }
trezoa-vote-program = { workspace = true }
trezoa_rbpf = { workspace = true }
tpl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
trezoa-rpc = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "trezoa"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
